--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
 <title>About Us</title>
 <meta name="title" content="Quiénes somos">
 <meta name="DC.title" lang="en" content="Quiénes somos ">
-<meta name="description" content="Regalos divertidos para niñas: descubre los mejores regalos originales para regalar a las niñas de tu vida. ¡Disfruta de la diversión!Descubre los mejores regalos para bebés de 0 años: desde juguetes educativos hasta productos útiles para que la pequeña disfrute.¡Encuentra el regalo perfecto para la niña de 1 año! Tenemos una gran selección de juguetes, ropa y más. ¡Explora ahora!Descubre los mejores regalos para niñas de 2 años: juguetes educativos, libros y juegos que fomentan el aprendizaje y la diversión.Descubre ideas únicas de regalos para niñas de 3 años. Tenemos los mejores juguetes, libros y más para hacer sus sueños realidad. ¡Compra ahora!Encuentra los mejores regalos para niñas de 4 años: juguetes, accesorios, libros y mucho más. ¡Alegra su día con un detalle único!Regalos divertidos y únicos para niñas de 5 años. Sorprende con los mejores regalos para todas las ocasiones especiales. ¡Entra ahora!¡Descubre los mejores regalos para niñas de 6 años, desde juguetes hasta libros y más! ¡Encuentra el perfecto aquí!¡Encuentra el regalo perfecto para tu niña de 7 años! Ofrecemos juguetes, ropa y más para todos los gustos. ¡Compra ahora!Encontrarás los mejores regalos para niñas de 8 años. Ideas divertidas, útiles y originales para que sus sueños se hagan realidad.Encontrarás la mejor selección de regalos para niñas de 9 años: juguetes, accesorios, decoración y mucho más. ¡Dale un toque especial con los mejores regalos!Regalos divertidos y originales para niñas de 10 años. Desde juguetes hasta libros, encontrarás el regalo perfecto para ella.Regalos perfectos para niñas de 11 años: juguetes, productos para la belleza, accesorios y mucho más. ¡Encuentra el regalo perfecto aquí!Regalos para niñas de 12 años: encuentra el regalo perfecto para su cumpleaños o Navidad. ¡Descubre ahora los mejores y divertidos regalos!Ideas de regalos para niñas de 13 años: descubre los mejores regalos para el cumpleaños, navidad o cualquier ocasión especial.¡Descubre los mejores regalos para niñas de 14 años! Ideas originales y divertidas para hacerla feliz con el regalo perfecto.Encuentra los mejores regalos para niñas de 15 años: desde gadgets y juguetes hasta joyas, ¡explora la variedad ahora!Encuentra los regalos perfectos para ese momento especial en la vida de una niña de 16 años. Sorpréndela con algo único y memorable.Regalos para niñas de 17 años: ¡encontrar el regalo perfecto para la joven de 17 años en tu vida es fácil! Descubre nuestra selección.Encuentra el regalo perfecto para una niña de 18 años. Desde joyas hasta juguetes, ¡tenemos la opción ideal para ella!">
+<meta name="description" content="Encuentra el regalo perfecto para una niña de 18 años. Desde joyas hasta juguetes, ¡tenemos la opción ideal para ella!">
 <meta name="keywords" content="Regalos para Niñas">
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -18,103 +18,103 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-a{
-text-decoration: none!important;
+footer{
+background:#0a0a0a;
+color:#ffffff;
 }
-.navbar a{
-font-size: 18.2px!important;
-font-weight: bold;
+html{
+scroll-behavior: smooth;
+}
+.v04398abbd5f4e0caf8cc67f797a0b570{
+background-color:#f8ca00!important;
+border-color:#f8ca00!important;
+color:#000000!important;
+}
+.ff3ec6f0168c14017beb24967520c3f07 p,.ff3ec6f0168c14017beb24967520c3f07 span,.ff3ec6f0168c14017beb24967520c3f07 label{
+font-size:16px!important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.a4732c6f8bbff0b5f418f918d99a3ede8 a{
+.btn-md{
+padding: 14.9px 29.7px;
+border-radius: 0;
+}
+.navbar a{
+font-size: 17.7px!important;
+font-weight: bold;
+}
+a{
+text-decoration: none!important;
+}
+.nav-item{
+padding-left:8.4px;
+padding-right:8.3px;
+padding-top:5px;
+padding-bottom:4.5px;
+}
+.wf8274d79c11df38757014fa9fd9023a9 p,.wf8274d79c11df38757014fa9fd9023a9 a,.wf8274d79c11df38757014fa9fd9023a9 span,.wf8274d79c11df38757014fa9fd9023a9 label{
+font-size:16px!important;
+}
+.ff3ec6f0168c14017beb24967520c3f07 a{
 font-size:16px;
 }
-html{
-scroll-behavior: smooth;
-}
-.c2d174580c8227d863fa6a7a58cd8b7fd p,.c2d174580c8227d863fa6a7a58cd8b7fd a,.c2d174580c8227d863fa6a7a58cd8b7fd span,.c2d174580c8227d863fa6a7a58cd8b7fd label{
-font-size:16px!important;
-}
-ul{
-list-style: circle;
-}
-.e114205577a98518d73eb986ce9f23c55:hover{
-box-shadow: 0 50.4px 49.6px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.a4732c6f8bbff0b5f418f918d99a3ede8 p,.a4732c6f8bbff0b5f418f918d99a3ede8 span,.a4732c6f8bbff0b5f418f918d99a3ede8 label{
-font-size:16px!important;
+.wf8274d79c11df38757014fa9fd9023a9 a,.ff3ec6f0168c14017beb24967520c3f07 a{
+color:#050505!important;
+text-decoration: underline !important;
 }
 .nav-link{
 color: #000000!important;
 
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.y2b2630ca12af1c96273e8ebbcb79bae1:hover{
+box-shadow: 0 50px 49.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 footer *{
 font-size:16px !important;
 }
-.d7772f03196fac0ef3eb5d438ade955c3{
-border: 1px solid #607d8b2e;
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+ul{
+list-style: circle;
+}
+.c8dbea4007b20f3d4fe92dfc5c43d99bf{
+border: 1px solid #6d8a983b;
 border-radius: 5px;
 padding: 20px 20px;
-background: #fcfaf6;
-}
-.nav-item{
-padding-left:7.6px;
-padding-right:8.4px;
-padding-top:5.1px;
-padding-bottom:4.9px;
-}
-.btn-md{
-padding: 14.7px 29.7px;
-border-radius: 0;
-}
-footer{
-background:#090909;
-color:#ffffff;
-}
-.c2d174580c8227d863fa6a7a58cd8b7fd a,.a4732c6f8bbff0b5f418f918d99a3ede8 a{
-color:#010101!important;
-text-decoration: underline !important;
-}
-.cdbfefce9c89b439f9a65f055b0b5e98d{
-background-color:#f8ca00!important;
-border-color:#f8ca00!important;
-color:#000000!important;
+background: #fdfbf7;
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="index.html" rel="nofollow" ><img alt="img/uzinga.png" src="img/uzinga.png"  width="150px" rel="nofollow"></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex ml-auto align-items-center navbar-nav"><li class="nav-item">
-<a class="w3701519e4d11ab69b3564f556d9511cf nav-link" href="index.html" rel="nofollow">Regalos para Niñas</a>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="align-items-center ml-auto d-flex navbar-nav"><li class="nav-item">
+<a class="nav-link ve1de4a6f70feca9de75b8932e735d555" href="index.html" rel="nofollow">Regalos para Niñas</a>
 </li>
 <li class="nav-item">
-<a class="nav-link w3701519e4d11ab69b3564f556d9511cf" href="regalos-para-bebes-de-0-anos.html" rel="nofollow">Regalos para Bebés de 0 años</a>
+<a class="nav-link ve1de4a6f70feca9de75b8932e735d555" href="regalos-para-bebes-de-0-anos.html" rel="nofollow">Regalos para Bebés de 0 años</a>
 </li>
 <li class="nav-item">
-<a class="w3701519e4d11ab69b3564f556d9511cf nav-link" href="regalos-para-ninas-de-1-ano.html" rel="nofollow">Regalos para Niñas de 1 año</a>
+<a class="ve1de4a6f70feca9de75b8932e735d555 nav-link" href="regalos-para-ninas-de-1-ano.html" rel="nofollow">Regalos para Niñas de 1 año</a>
 </li>
 <li class="nav-item">
-<a class="nav-link w3701519e4d11ab69b3564f556d9511cf" href="regalos-para-ninas-de-2-anos.html" rel="nofollow">Regalos para Niñas de 2 años</a>
+<a class="ve1de4a6f70feca9de75b8932e735d555 nav-link" href="regalos-para-ninas-de-2-anos.html" rel="nofollow">Regalos para Niñas de 2 años</a>
 </li>
 <li class="dropdown nav-item">
-<a class="dropdown-toggle nav-link w3701519e4d11ab69b3564f556d9511cf" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Más</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<a class="ve1de4a6f70feca9de75b8932e735d555 dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Más</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="regalos-para-ninas-de-3-anos.html" rel="nofollow" >Regalos para Niñas de 3 años</a><a class="dropdown-item" href="regalos-para-ninas-de-4-anos.html" rel="nofollow" >Regalos para Niñas de 4 años</a><a class="dropdown-item" href="regalos-para-ninas-de-5-anos.html" rel="nofollow" >Regalos para Niñas de 5 años</a><a class="dropdown-item" href="regalos-para-ninas-de-6-anos.html" rel="nofollow" >Regalos para Niñas de 6 años</a><a class="dropdown-item" href="regalos-para-ninas-de-7-anos.html" rel="nofollow" >Regalos para Niñas de 7 años</a><a class="dropdown-item" href="regalos-para-ninas-de-8-anos.html" rel="nofollow" >Regalos para Niñas de 8 años</a><a class="dropdown-item" href="regalos-para-ninas-de-9-anos.html" rel="nofollow" >Regalos para Niñas de 9 años</a><a class="dropdown-item" href="regalos-para-ninas-de-10-anos.html" rel="nofollow" >Regalos para Niñas de 10 años</a><a class="dropdown-item" href="regalos-para-ninas-de-11-anos.html" rel="nofollow" >Regalos para Niñas de 11 años</a><a class="dropdown-item" href="regalos-para-ninas-de-12-anos.html" rel="nofollow" >Regalos para Niñas de 12 años</a><a class="dropdown-item" href="regalos-para-ninas-de-13-anos.html" rel="nofollow" >Regalos para Niñas de 13 años</a><a class="dropdown-item" href="regalos-para-ninas-de-14-anos.html" rel="nofollow" >Regalos para Niñas de 14 años</a><a class="dropdown-item" href="regalos-para-ninas-de-15-anos.html" rel="nofollow" >Regalos para Niñas de 15 años</a><a class="dropdown-item" href="regalos-para-ninas-de-16-anos.html" rel="nofollow" >Regalos para Niñas de 16 años</a><a class="dropdown-item" href="regalos-para-ninas-de-17-anos.html" rel="nofollow" >Regalos para Niñas de 17 años</a><a class="dropdown-item" href="regalos-para-ninas-de-18-anos.html" rel="nofollow" >Regalos para Niñas de 18 años</a></div>
 </li>
-<li class="nav-item"><a class="nav-link w3701519e4d11ab69b3564f556d9511cf" rel=nofollow href="about-us.html">Quiénes somos</a>
+<li class="nav-item"><a class="ve1de4a6f70feca9de75b8932e735d555 nav-link" rel=nofollow href="about-us.html">Quiénes somos</a>
 </li><li class="nav-item">
-<a class="cdbfefce9c89b439f9a65f055b0b5e98d btn btn-md" href="https://uzinga.es/contactanos" rel="nofollow">Contacte con nosotros</a>
+<a class="btn-md btn v04398abbd5f4e0caf8cc67f797a0b570" href="https://uzinga.es/contactanos" rel="nofollow">Contacte con nosotros</a>
 </li>
 </ul>
 </div>
@@ -128,7 +128,7 @@ color:#000000!important;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 d7772f03196fac0ef3eb5d438ade955c3">
+<div class="col-md-12 mb-3 c8dbea4007b20f3d4fe92dfc5c43d99bf">
 <div class="row-item d-flex align-left">
 <div><p><em>Bienvenidos a Uzinga, su destino &uacute;nico para ideas de regalos excepcionales.</em></p>
 
@@ -160,25 +160,27 @@ color:#000000!important;
 </div>
 </div>
 <footer>
-<div class="container pt-5 py-4" >
+<div class="py-4 container pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>Uzinga España</p>
 <p>Correo electrónico : info@uzinga.es</p>
-<p>Sitio web de la empresa : <a class="w3701519e4d11ab69b3564f556d9511cf" href="https://uzinga.es" rel="nofollow">https://uzinga.es</a></p>
-</div><div class="col-lg-3"><p>Últimas entradas de blog</p> 
+<p>Sitio web de la empresa : <a class="ve1de4a6f70feca9de75b8932e735d555" href="https://uzinga.es" rel="nofollow">https://uzinga.es</a></p>
+</div><div class="col-lg-3">
+<p>Enlaces útiles</p>
+<p><a class="ve1de4a6f70feca9de75b8932e735d555" href="https://s3.amazonaws.com/uzinga-es/index.html"  target="_blank">Uzinga en AWS</a></p><p><a class="ve1de4a6f70feca9de75b8932e735d555" href="https://objectstorage.us-ashburn-1.oraclecloud.com/n/idwpxgofmz9m/b/uzinga-es/o/index.html"  target="_blank">Uzinga en Oracle</a></p><p><a class="ve1de4a6f70feca9de75b8932e735d555" href="https://us-southeast-1.linodeobjects.com/uzinga-es/index.html"  target="_blank">Uzinga en Linode</a></p><p><a class="ve1de4a6f70feca9de75b8932e735d555" href="https://storage.googleapis.com/uzinga-es/index.html"  target="_blank">Uzinga en Google Cloud</a></p><p><a class="ve1de4a6f70feca9de75b8932e735d555" href="https://yaccs.blob.core.windows.net/uzinga-es/index.html"  target="_blank">Uzinga en Azure</a></p></div><div class="col-lg-3"><p>Últimas entradas de blog</p> 
  
-<p><a href="https://uzinga.com.mx" rel="nofollow" target="_blank">Uzinga México</a></p><p><a href="https://uzinga.com.br" rel="nofollow" target="_blank">Uzinga Brasil</a></p><p><a class="w3701519e4d11ab69b3564f556d9511cf" href="sitemap.html" rel="nofollow">Mapa del sitio</a></p>
-<p><a class="w3701519e4d11ab69b3564f556d9511cf" href="privacy-policy.html" rel="nofollow">Política de privacidad</a></p>
-<p><a class="w3701519e4d11ab69b3564f556d9511cf" href="about-us.html" rel="nofollow">Quiénes somos</a></p>
+<p><a href="https://uzinga.com.mx" rel="nofollow" target="_blank">Uzinga México</a></p><p><a href="https://uzinga.com.br" rel="nofollow" target="_blank">Uzinga Brasil</a></p><p><a class="ve1de4a6f70feca9de75b8932e735d555" href="sitemap.html" rel="nofollow">Mapa del sitio</a></p>
+<p><a class="ve1de4a6f70feca9de75b8932e735d555" href="privacy-policy.html" rel="nofollow">Política de privacidad</a></p>
+<p><a class="ve1de4a6f70feca9de75b8932e735d555" href="about-us.html" rel="nofollow">Quiénes somos</a></p>
 <div class="col-lg-12">
-<img class="img-fluid e114205577a98518d73eb986ce9f23c55" src="img/uzinga-logo.png" alt="">
+<img class="img-fluid y2b2630ca12af1c96273e8ebbcb79bae1" src="img/uzinga-logo.png" alt="">
 </div>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Síguenos</p>
-<a href="https://www.facebook.com/UzingaEspana/" class="facebook xd69d6cde226649e8d59d6500e1cabdf6" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.youtube.com/@UzingaEspana" class="youtube xd69d6cde226649e8d59d6500e1cabdf6" rel="nofollow"><i class="fa fa-youtube"></i></a>
+<a href="https://www.facebook.com/UzingaEspana/" class="facebook v9b888d7d5607da05822a8eb8690f815b" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.youtube.com/@UzingaEspana" class="youtube v9b888d7d5607da05822a8eb8690f815b" rel="nofollow"><i class="fa fa-youtube"></i></a>
 </div>
 </div></div>
 </div>
