--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,7 @@
 <title>Privacy Policy</title>
 <meta name="title" content="Política de privacidad">
 <meta name="DC.title" lang="en" content="Política de privacidad">
-<meta name="description" content="Regalos divertidos para niñas: descubre los mejores regalos originales para regalar a las niñas de tu vida. ¡Disfruta de la diversión!Descubre los mejores regalos para bebés de 0 años: desde juguetes educativos hasta productos útiles para que la pequeña disfrute.¡Encuentra el regalo perfecto para la niña de 1 año! Tenemos una gran selección de juguetes, ropa y más. ¡Explora ahora!Descubre los mejores regalos para niñas de 2 años: juguetes educativos, libros y juegos que fomentan el aprendizaje y la diversión.Descubre ideas únicas de regalos para niñas de 3 años. Tenemos los mejores juguetes, libros y más para hacer sus sueños realidad. ¡Compra ahora!Encuentra los mejores regalos para niñas de 4 años: juguetes, accesorios, libros y mucho más. ¡Alegra su día con un detalle único!Regalos divertidos y únicos para niñas de 5 años. Sorprende con los mejores regalos para todas las ocasiones especiales. ¡Entra ahora!¡Descubre los mejores regalos para niñas de 6 años, desde juguetes hasta libros y más! ¡Encuentra el perfecto aquí!¡Encuentra el regalo perfecto para tu niña de 7 años! Ofrecemos juguetes, ropa y más para todos los gustos. ¡Compra ahora!Encontrarás los mejores regalos para niñas de 8 años. Ideas divertidas, útiles y originales para que sus sueños se hagan realidad.Encontrarás la mejor selección de regalos para niñas de 9 años: juguetes, accesorios, decoración y mucho más. ¡Dale un toque especial con los mejores regalos!Regalos divertidos y originales para niñas de 10 años. Desde juguetes hasta libros, encontrarás el regalo perfecto para ella.Regalos perfectos para niñas de 11 años: juguetes, productos para la belleza, accesorios y mucho más. ¡Encuentra el regalo perfecto aquí!Regalos para niñas de 12 años: encuentra el regalo perfecto para su cumpleaños o Navidad. ¡Descubre ahora los mejores y divertidos regalos!Ideas de regalos para niñas de 13 años: descubre los mejores regalos para el cumpleaños, navidad o cualquier ocasión especial.¡Descubre los mejores regalos para niñas de 14 años! Ideas originales y divertidas para hacerla feliz con el regalo perfecto.Encuentra los mejores regalos para niñas de 15 años: desde gadgets y juguetes hasta joyas, ¡explora la variedad ahora!Encuentra los regalos perfectos para ese momento especial en la vida de una niña de 16 años. Sorpréndela con algo único y memorable.Regalos para niñas de 17 años: ¡encontrar el regalo perfecto para la joven de 17 años en tu vida es fácil! Descubre nuestra selección.Encuentra el regalo perfecto para una niña de 18 años. Desde joyas hasta juguetes, ¡tenemos la opción ideal para ella!">
+<meta name="description" content="Encuentra el regalo perfecto para una niña de 18 años. Desde joyas hasta juguetes, ¡tenemos la opción ideal para ella!">
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -18,68 +18,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.e2bd1b3d2761cd48803a14a57046aa247:hover{
+box-shadow: 0 49.5px 49.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
-footer{
-background:#0b0b0b;
-color:#ffffff;
+.w7b31cf6a13f56fd6a0c8a7db77eec465 p,.w7b31cf6a13f56fd6a0c8a7db77eec465 a,.w7b31cf6a13f56fd6a0c8a7db77eec465 span,.w7b31cf6a13f56fd6a0c8a7db77eec465 label{
+font-size:16px!important;
 }
-.navbar a{
-font-size: 17.8px!important;
-font-weight: bold;
+.ae54cd43b86810dbc09ae6bdf677adbd5 p,.ae54cd43b86810dbc09ae6bdf677adbd5 span,.ae54cd43b86810dbc09ae6bdf677adbd5 label{
+font-size:16px!important;
+}
+a{
+text-decoration: none!important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.y342585f523878a9947b3c43935db8b39 a{
-font-size:16px;
-}
-.v67e241e0695fb2223ba18e07718d2506 a,.y342585f523878a9947b3c43935db8b39 a{
-color:#0b0b0b!important;
-text-decoration: underline !important;
-}
-.v67e241e0695fb2223ba18e07718d2506 p,.v67e241e0695fb2223ba18e07718d2506 a,.v67e241e0695fb2223ba18e07718d2506 span,.v67e241e0695fb2223ba18e07718d2506 label{
-font-size:16px!important;
-}
 footer *{
 font-size:16px !important;
 }
-ul{
-list-style: circle;
-}
-.z2600ea5a1d773f23c0d7326deab9ad76:hover{
-box-shadow: 0 50.5px 49.9px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.w7b31cf6a13f56fd6a0c8a7db77eec465 a,.ae54cd43b86810dbc09ae6bdf677adbd5 a{
+color:#111111!important;
+text-decoration: underline !important;
 }
 .nav-item{
-padding-left:8.3px;
-padding-right:7.6px;
-padding-top:5px;
-padding-bottom:4.5px;
+padding-left:8.1px;
+padding-right:7.7px;
+padding-top:5.4px;
+padding-bottom:5.5px;
 }
-.nav-link{
-color: #000000!important;
-
+.navbar a{
+font-size: 18.2px!important;
+font-weight: bold;
 }
 html{
 scroll-behavior: smooth;
 }
-.x14f527fd6280a128ec2812341273fc01{
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.btn-md{
+padding: 15.5px 29.6px;
+border-radius: 0;
+}
+.v79e6d4fbcc92c835caa5d22cf136d530{
 background-color:#f8ca00!important;
 border-color:#f8ca00!important;
 color:#000000!important;
 }
-a{
-text-decoration: none!important;
+footer{
+background:#101010;
+color:#ffffff;
 }
-.btn-md{
-padding: 14.6px 29.9px;
-border-radius: 0;
+ul{
+list-style: circle;
 }
-.y342585f523878a9947b3c43935db8b39 p,.y342585f523878a9947b3c43935db8b39 span,.y342585f523878a9947b3c43935db8b39 label{
-font-size:16px!important;
+.ae54cd43b86810dbc09ae6bdf677adbd5 a{
+font-size:16px;
+}
+.nav-link{
+color: #000000!important;
+
 }
 </style>
 </head>
@@ -88,26 +88,26 @@ font-size:16px!important;
 <a class="navbar-brand" href="index.html" rel="nofollow" ><img alt="img/uzinga.png" src="img/uzinga.png"  width="150px" rel="nofollow"></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="ml-auto align-items-center navbar-nav d-flex"><li class="nav-item">
-<a class="nav-link e47f724749038a2e51ec83cab697bae78" href="index.html" rel="nofollow">Regalos para Niñas</a>
+<ul class="navbar-nav align-items-center ml-auto d-flex"><li class="nav-item">
+<a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a nav-link" href="index.html" rel="nofollow">Regalos para Niñas</a>
 </li>
 <li class="nav-item">
-<a class="e47f724749038a2e51ec83cab697bae78 nav-link" href="regalos-para-bebes-de-0-anos.html" rel="nofollow">Regalos para Bebés de 0 años</a>
+<a class="nav-link ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="regalos-para-bebes-de-0-anos.html" rel="nofollow">Regalos para Bebés de 0 años</a>
 </li>
 <li class="nav-item">
-<a class="e47f724749038a2e51ec83cab697bae78 nav-link" href="regalos-para-ninas-de-1-ano.html" rel="nofollow">Regalos para Niñas de 1 año</a>
+<a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a nav-link" href="regalos-para-ninas-de-1-ano.html" rel="nofollow">Regalos para Niñas de 1 año</a>
 </li>
 <li class="nav-item">
-<a class="nav-link e47f724749038a2e51ec83cab697bae78" href="regalos-para-ninas-de-2-anos.html" rel="nofollow">Regalos para Niñas de 2 años</a>
+<a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a nav-link" href="regalos-para-ninas-de-2-anos.html" rel="nofollow">Regalos para Niñas de 2 años</a>
 </li>
-<li class="nav-item dropdown">
-<a class="e47f724749038a2e51ec83cab697bae78 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Más</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<li class="dropdown nav-item">
+<a class="nav-link ee4d9fb4aa7bad1bb7576ef1ca0029a1a dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">Más</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="regalos-para-ninas-de-3-anos.html" rel="nofollow" >Regalos para Niñas de 3 años</a><a class="dropdown-item" href="regalos-para-ninas-de-4-anos.html" rel="nofollow" >Regalos para Niñas de 4 años</a><a class="dropdown-item" href="regalos-para-ninas-de-5-anos.html" rel="nofollow" >Regalos para Niñas de 5 años</a><a class="dropdown-item" href="regalos-para-ninas-de-6-anos.html" rel="nofollow" >Regalos para Niñas de 6 años</a><a class="dropdown-item" href="regalos-para-ninas-de-7-anos.html" rel="nofollow" >Regalos para Niñas de 7 años</a><a class="dropdown-item" href="regalos-para-ninas-de-8-anos.html" rel="nofollow" >Regalos para Niñas de 8 años</a><a class="dropdown-item" href="regalos-para-ninas-de-9-anos.html" rel="nofollow" >Regalos para Niñas de 9 años</a><a class="dropdown-item" href="regalos-para-ninas-de-10-anos.html" rel="nofollow" >Regalos para Niñas de 10 años</a><a class="dropdown-item" href="regalos-para-ninas-de-11-anos.html" rel="nofollow" >Regalos para Niñas de 11 años</a><a class="dropdown-item" href="regalos-para-ninas-de-12-anos.html" rel="nofollow" >Regalos para Niñas de 12 años</a><a class="dropdown-item" href="regalos-para-ninas-de-13-anos.html" rel="nofollow" >Regalos para Niñas de 13 años</a><a class="dropdown-item" href="regalos-para-ninas-de-14-anos.html" rel="nofollow" >Regalos para Niñas de 14 años</a><a class="dropdown-item" href="regalos-para-ninas-de-15-anos.html" rel="nofollow" >Regalos para Niñas de 15 años</a><a class="dropdown-item" href="regalos-para-ninas-de-16-anos.html" rel="nofollow" >Regalos para Niñas de 16 años</a><a class="dropdown-item" href="regalos-para-ninas-de-17-anos.html" rel="nofollow" >Regalos para Niñas de 17 años</a><a class="dropdown-item" href="regalos-para-ninas-de-18-anos.html" rel="nofollow" >Regalos para Niñas de 18 años</a></div>
 </li>
-<li class="nav-item"><a class="e47f724749038a2e51ec83cab697bae78 nav-link" rel=nofollow href="about-us.html">Quiénes somos</a>
+<li class="nav-item"><a class="nav-link ee4d9fb4aa7bad1bb7576ef1ca0029a1a" rel=nofollow href="about-us.html">Quiénes somos</a>
 </li><li class="nav-item">
-<a class="x14f527fd6280a128ec2812341273fc01 btn-md btn" href="https://uzinga.es/contactanos" rel="nofollow">Contacte con nosotros</a>
+<a class="v79e6d4fbcc92c835caa5d22cf136d530 btn btn-md" href="https://uzinga.es/contactanos" rel="nofollow">Contacte con nosotros</a>
 </li>
 </ul>
 </div>
@@ -152,21 +152,23 @@ font-size:16px!important;
 <div class="row"><div class="col-lg-3">
 <p>Uzinga España</p>
 <p>Correo electrónico : info@uzinga.es</p>
-<p>Sitio web de la empresa : <a class="e47f724749038a2e51ec83cab697bae78" href="https://uzinga.es" rel="nofollow">https://uzinga.es</a></p>
-</div><div class="col-lg-3"><p>Últimas entradas de blog</p> 
+<p>Sitio web de la empresa : <a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="https://uzinga.es" rel="nofollow">https://uzinga.es</a></p>
+</div><div class="col-lg-3">
+<p>Enlaces útiles</p>
+<p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="https://s3.amazonaws.com/uzinga-es/index.html"  target="_blank">Uzinga en AWS</a></p><p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="https://objectstorage.us-ashburn-1.oraclecloud.com/n/idwpxgofmz9m/b/uzinga-es/o/index.html"  target="_blank">Uzinga en Oracle</a></p><p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="https://us-southeast-1.linodeobjects.com/uzinga-es/index.html"  target="_blank">Uzinga en Linode</a></p><p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="https://storage.googleapis.com/uzinga-es/index.html"  target="_blank">Uzinga en Google Cloud</a></p><p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="https://yaccs.blob.core.windows.net/uzinga-es/index.html"  target="_blank">Uzinga en Azure</a></p></div><div class="col-lg-3"><p>Últimas entradas de blog</p> 
  
-<p><a class="e47f724749038a2e51ec83cab697bae78" href="https://uzinga.com.mx" rel="nofollow" target="_blank">Uzinga México</a></p><p><a class="e47f724749038a2e51ec83cab697bae78" href="https://uzinga.com.br" rel="nofollow" target="_blank">Uzinga Brasil</a></p><p><a class="e47f724749038a2e51ec83cab697bae78" href="sitemap.html" rel="nofollow">Mapa del sitio</a></p>
-<p><a class="e47f724749038a2e51ec83cab697bae78" href="privacy-policy.html" rel="nofollow">Política de privacidad</a></p>
-<p><a class="e47f724749038a2e51ec83cab697bae78" href="about-us.html" rel="nofollow">Quiénes somos</a></p>
+<p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="https://uzinga.com.mx" rel="nofollow" target="_blank">Uzinga México</a></p><p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="https://uzinga.com.br" rel="nofollow" target="_blank">Uzinga Brasil</a></p><p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="sitemap.html" rel="nofollow">Mapa del sitio</a></p>
+<p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="privacy-policy.html" rel="nofollow">Política de privacidad</a></p>
+<p><a class="ee4d9fb4aa7bad1bb7576ef1ca0029a1a" href="about-us.html" rel="nofollow">Quiénes somos</a></p>
 <div class="col-lg-12">
-<img class="img-fluid z2600ea5a1d773f23c0d7326deab9ad76" src="img/uzinga-logo.png" alt="">
+<img class="img-fluid e2bd1b3d2761cd48803a14a57046aa247" src="img/uzinga-logo.png" alt="">
 </div>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Síguenos</p>
-<a href="https://www.facebook.com/UzingaEspana/" class="zdc02e62cb29a7d6e00b01a4f3afbac29 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.youtube.com/@UzingaEspana" class="zdc02e62cb29a7d6e00b01a4f3afbac29 youtube" rel="nofollow"><i class="fa fa-youtube"></i></a>
+<a href="https://www.facebook.com/UzingaEspana/" class="d5e57b02bdd7673924bd8f769c7f5995d facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.youtube.com/@UzingaEspana" class="youtube d5e57b02bdd7673924bd8f769c7f5995d" rel="nofollow"><i class="fa fa-youtube"></i></a>
 </div>
 </div></div>
 </div>
